<!-- ignore translation problems -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <!-- manifest -->
    <string name="app_name">TrackMyPet</string>
    <string name="main_activity">TrackMyDog</string>

    <string name="label_login">TrackMyPet</string> <!-- launcher = needs to have an app name -->
    <string name="label_main_activity">Track My Pet</string>
    <string name="label_dog_add_new">New Dog</string>
    <string name="label_dog_details">Dog Details</string>
    <string name="label_dog_details_edit">Edit Dog</string>
    <string name="label_user_add_new">New User</string>
    <string name="label_user_details">User Details</string>
    <string name="label_location_add">Add Safe Zone</string>
    <!-- check if needed -->
    <string name="label_activity_maps">Map</string>

    <!-- menu/navigation.xml -->
    <string name="menu_map">Map</string>
    <string name="menu_dogs">Dogs</string>
    <string name="menu_user">User</string>

    <!-- login activity = google sign in -->
    <string name="desc_loading_screen">Loading - checking for user</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign out.</string>

    <!-- base activity -->
    <string name="loading">Loading</string>

    <!-- map fragment -->
    <string name="no_dogs_map">No Dogs</string>

    <!-- action bar menu = buttons -->
    <string name="action_edit">Edit</string>

    <!-- add/edit user activity = hints -->
    <string name="user_name_mandatory">Name *</string>
    <string name="user_city">City</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="user_gender">Gender</string>

    <!-- dog list = default values -->
    <string name="no_dogs_warning">No available dogs</string>
    <string name="dog_list_item_image_description">Dog image</string>
    <string name="dog_list_item_name">Dog Name</string>
    <string name="dog_list_item_breed">Dog Breed</string>
    <string name="dog_list_item_last_location">Last known location</string>

    <!-- dog details -->
    <string name="desc_dog_image">Dog image</string>
    <string name="location_options">Location options: \nVrbik 8a, Zagreb</string>
    <string name="location_interval">Location interval: \n10 seconds</string>
    <string name="basic_info">Basic info</string>
    <string name="tracking_options">Tracking options</string>
    <string name="medical_info">Medical info</string>
    <string name="desc_add_medical_info">Add medical info button</string>
    <string name="recent_activity">Recent activity</string>

    <!-- dog details = info labels -->
    <string name="label_breed">Breed:</string>
    <string name="label_age">Age:</string>
    <string name="label_height">Height:</string>
    <string name="label_weight">Weight:</string>
    <string name="label_location_name">Location</string>
    <string name="label_interval">Interval</string>

    <!-- measure units -->
    <string name="seconds">&#160;s</string>
    <string name="years">&#160;yrs</string>
    <string name="centimeters">&#160;cm</string>
    <string name="meters">&#160;m</string>
    <string name="kilometers">&#160;km</string>
    <string name="kilograms">&#160;kg</string>

    <!-- add/edit dog activity = hints -->
    <string name="chip_number_mandatory">Chip Number *</string>
    <string name="dog_name_mandatory">Name *</string>
    <string name="dog_breed">Breed</string>
    <string name="dog_age">Age</string>
    <string name="dog_gender">Gender</string>
    <string name="dog_date_of_birth">Date Of Birth</string>
    <string name="dog_weight">Weight</string>
    <string name="dog_height">Height</string>

    <!-- arrays -->
    <string name="dog_gender_female">Female</string>
    <string name="dog_gender_male">Male</string>

    <!-- errors while saving dog/user -->
    <string name="error_while_saving">Error while saving!</string>
    <string name="error_empty_fields">Some fields are empty!</string>
    <string name="error_wrong_chip_number">Wrong chip number!</string>
    <string name="error_chip_has_user">Chip already added to user!</string>
    <!-- error messages = for activites with save -->
    <string name="error_save_to_database">Error while saving data!</string>
    <string name="error">Error!</string>


    <!-- buttons -->
    <string name="save_button">Save</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done</string>
    <string name="logout_button">Logout</string>
    <string name="add_location_button">Add Location</string>

    <!-- add location activity -->
    <string name="location_address">Location Address</string>

    <!-- profile fragment = image descriptions, text placeholders and info labels -->
    <string name="desc_cover_image">Cover image</string>
    <string name="desc_edit_button">Edit button</string>
    <!-- default text - user info = all changed to empty -->
    <string name="placeholder_empty"> </string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_city">Location</string>
    <string name="placeholder_email">email@email.com</string>
    <string name="placeholder_phone_number">0985761423</string>
    <string name="placeholder_gender">Other</string>
    <string name="placeholder_date_of_birth">28/03/1994</string>
    <!-- labels -->
    <string name="label_email">Email:</string>
    <string name="label_phone_number">Phone number:</string>
    <string name="label_full_name">Full name:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_date_of_birth">Date of birth:</string>

    <!-- add location activity -->
    <string name="desc_search_button">Search button</string>
    <string name="placeholder_range">100 m</string>

</resources>