<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:weightSum="10"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center" >

        <!-- fresco:roundAsCircle="true" -->
        <com.facebook.drawee.view.SimpleDraweeView
            xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dogImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            fresco:viewAspectRatio="1"
            fresco:actualImageScaleType="centerCrop"
            fresco:placeholderImage="@drawable/default_dog" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/items_margin_between"
        android:orientation="vertical"
        android:layout_weight="7"
        android:padding="@dimen/border_padding" >

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_list_item_name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/breedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_list_item_breed"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dog_list_item_last_location"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>