<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="66dp"
        android:background="@color/transparent_white"
        android:weightSum="10"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_address"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/desc_search_button"
            android:padding="10dp"
            android:src="@drawable/search_button" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@android:layout/simple_gallery_item"
        tools:context=".fragments.MapFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent_white"
        android:elevation="2dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:weightSum="10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="@color/colorAccent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="3"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/save_button"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/rangeSeekbar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:max="10"
                android:progress="1" />

            <TextView
                android:id="@+id/rangeText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/placeholder_range" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>